// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PercentageFill component -  should match the snapshot with an out of range value. No fill applied 1`] = `
<DocumentFragment>
  <div
    class="component__PercentageFillContainer-sc-1jijta3-0 bmHKNY"
    data-testid="review-percentage-fill"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="-50"
      class="MuiLinearProgress-root WithStyles(ForwardRef(LinearProgress))-root-4 MuiLinearProgress-colorPrimary WithStyles(ForwardRef(LinearProgress))-colorPrimary-5 MuiLinearProgress-determinate"
      role="progressbar"
    >
      <div
        class="MuiLinearProgress-bar WithStyles(ForwardRef(LinearProgress))-bar-6 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
        style="transform: translateX(-150%);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PercentageFill component -  should match the snapshot with percentage fill provided 1`] = `
<DocumentFragment>
  <div
    class="component__PercentageFillContainer-sc-1jijta3-0 bmHKNY"
    data-testid="review-percentage-fill"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="MuiLinearProgress-root WithStyles(ForwardRef(LinearProgress))-root-1 MuiLinearProgress-colorPrimary WithStyles(ForwardRef(LinearProgress))-colorPrimary-2 MuiLinearProgress-determinate"
      role="progressbar"
    >
      <div
        class="MuiLinearProgress-bar WithStyles(ForwardRef(LinearProgress))-bar-3 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
        style="transform: translateX(-70%);"
      />
    </div>
  </div>
</DocumentFragment>
`;
